--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,43 +3,54 @@ name: CI
 on:
   pull_request:
     branches:
-      - main
       - dev
+      - main
 
 jobs:
-  build:
+  ci:
+    name: Lint & Build
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: latest
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: latest
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile
 
-      - name: Lint and format check
-        run: pnpm biome check .
+      - name: Lint (Biome)
+        run: pnpm biome ci .
 
       - name: Build
         run: pnpm build
 
-      - name: Run tests
-        run: pnpm test --if-present
+  deploy-staging:
+    name: Deploy to Staging
+    runs-on: ubuntu-latest
+    needs: ci
+    if: github.base_ref == 'dev'
 
-      - name: Trigger Staging Deployment
-        if: success() && github.base_ref == 'dev'
-        run: curl -X POST ${{ secrets.VERCEL_DEPLOY_STAGING }}
+    steps:
+      - name: Trigger Vercel Staging Deploy
+        run: curl -X POST ${{ secrets.VERCEL_DEPLOY_HOOK_STAGING }}
 
-      - name: Trigger Production Deployment
-        if: success() && github.base_ref == 'main'
-        run: curl -X POST ${{ secrets.VERCEL_DEPLOY_PRODUCTION }}
+  deploy-production:
+    name: Deploy to Production
+    runs-on: ubuntu-latest
+    needs: ci
+    if: github.base_ref == 'main'
+
+    steps:
+      - name: Trigger Vercel Production Deploy
+        run: curl -X POST ${{ secrets.VERCEL_DEPLOY_HOOK_PRODUCTION }}
