--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - dev
       - main
+  push:
+    branches:
+      - dev
+      - main
 
 jobs:
   ci:
@@ -39,18 +43,18 @@ jobs:
     name: Deploy to Staging
     runs-on: ubuntu-latest
     needs: ci
-    if: github.base_ref == 'dev'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/dev'
 
     steps:
       - name: Trigger Vercel Staging Deploy
-        run: curl -X POST ${{ secrets.VERCEL_DEPLOY_HOOK_STAGING }}
+        run: curl -X POST "${{ secrets.VERCEL_DEPLOY_HOOK_STAGING }}"
 
   deploy-production:
     name: Deploy to Production
     runs-on: ubuntu-latest
     needs: ci
-    if: github.base_ref == 'main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
       - name: Trigger Vercel Production Deploy
-        run: curl -X POST ${{ secrets.VERCEL_DEPLOY_HOOK_PRODUCTION }}
+        run: curl -X POST "${{ secrets.VERCEL_DEPLOY_HOOK_PRODUCTION }}"
